Updated based on findbugs report